# pytemplate

./: .gitignore  .pre-commit-config.yaml  cliff.toml  pyproject.toml
.github/workflows/: build.yml
src/pytemplate/: __init__.py  main.py
tests/: test_main.py
